turmites.lessons.turmites.langton.Langton.scala.code
def setCouleurSol(c:Color){
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	
}

def step() {
if (getCouleurSol()==Color.black){
	setCouleurSol(color.white);
	gauche();
	avance();
}
else if (getCouleurBrosse()==Color.white){
	setCouleurSol(color.black);
	gauche();
	avance();


	
}
}
etCouleurBrosse(c:Color) getCouleurBrosse():Color
Interagir avec le monde
Obtenir la couleur du sol
getCouleurSol():Color